<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fpt_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_instagram"
            android:src="@drawable/fpt_logo"
            android:layout_marginVertical="@dimen/text_size_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_account_vi"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_36"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/text_size_20" />

        <EditText
            android:id="@+id/emailOrPhone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_16"
            android:layout_marginEnd="@dimen/text_size_16"
            android:width="400dp"
            android:autofillHints="Email or Phone"
            android:hint="@string/email_or_phone_vi"
            android:layout_marginTop="@dimen/margin_50" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_16"
            android:layout_marginEnd="@dimen/text_size_16"
            android:width="400dp"
            android:autofillHints="Password"
            android:inputType="textPassword"
            android:hint="@string/password_vi"
            android:layout_marginTop="@dimen/text_size_20" />

        <EditText
            android:id="@+id/password_confirmed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_16"
            android:layout_marginEnd="@dimen/text_size_16"
            android:width="400dp"
            android:autofillHints="Password"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_vi"
            android:layout_marginTop="@dimen/text_size_20" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_16"
            android:layout_marginEnd="@dimen/text_size_16"
            android:layout_marginTop="@dimen/margin_30"
            android:width="@dimen/width_400"
            android:text="@string/sign_up_vi"
            android:backgroundTint="@color/fpt_blue"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/padding_80"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account_vi"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tv_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooose_login_vi"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_16"
                android:clickable="true"/>

        </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="@string/or_vi"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_gravity="center"
                android:textColor="@color/fpt_orange"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"/>

        <Button
            android:id="@+id/button_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_16"
            android:layout_marginEnd="@dimen/text_size_16"
            android:layout_marginTop="@dimen/margin_30"
            android:width="@dimen/width_400"
            android:text="@string/comeback_login"
            android:textAlignment="center"
            android:backgroundTint="@color/fpt_green"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>